# Dataset

./: README.md  pyproject.toml
configs/examples/: corpus_mixture.toml  default.toml  hf_backend.toml  llamacpp_server_backend.toml  stage_c_templates.toml  vllm_backend.toml
distill_factory/: __init__.py
distill_factory/config/: defaults.py  schema.py
distill_factory/corpus/: __init__.py  extract.py  manifest.py  mix.py  schema.py
distill_factory/data/: chunking.py  formats.py  ingest.py  selection.py  splits.py
scripts/: benchmark_pipeline.py  build_dataset.py  build_text_corpus.py  check_hf_padding_expectation.py  compare_datasets.py  extract_source_dataset.py  inspect_dataset.py  inspect_hf_offload_and_oom.py  inspect_text_corpus.py  measure_tokenization_cost.py  merge_dataset_shards.py  preview_prompt.py  preview_selection_policy.py  validate_backend_parity.py  validate_stage_a.py  validate_stage_a_selection.py
tests/: test_build_dataset_batch_size_cli.py  test_chunking.py  test_config_loading.py  test_corpus_mixing.py  test_hf_offload_layers.py  test_hf_padding_expectation_script.py  test_resume_dedupe_validation.py  test_selection_orchestrator_propagation.py  test_selection_preview_alignment.py  test_selection_utils.py  test_source_extraction_layout.py  test_stage_a_selection.py  test_stage_a_selection_config_plumbing.py  test_stage_b_selection_partial.py  test_stage_b_validation.py  test_stage_c_validation.py  test_stage_runtime_env_binding.py  test_storage_roundtrip.py  test_teacher_topk_semantics.py  test_validate_stage_a_config_passthrough.py
(+18 files in other folders)
