[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distill-factory"
version = "0.1.0"
description = "Data pipeline repository for generating distillation datasets from multiple teacher language models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pyarrow",
  "orjson",
  "tqdm",
]

[tool.setuptools.packages.find]
include = ["distill_factory*"]
